--- a/emdr.html
+++ b/emdr.html
@@ -10,6 +10,7 @@ Ich habe diese Software für meine Frau Iris Gothe an einem Wochende geschrieben
 
 Autor: Klaus Gero Gothe
 Version: 1.0 / 2023-01
+Repository: https://github.com/practical-solutions/emdr (hier kann man die aktuelle Version herunterladen)
 
 --------------------------------------------------------------------------------------------------------------------------
 
