License und Readme hinzugefuegt

--- a/emdr.html
+++ b/emdr.html
@@ -6,7 +6,7 @@ Diese Software darf ausdrücklich von allen kostenfrei und auch im kommerziellen
 
 Es handelt sich um eine HTML-Datei, die in jedem Browser verwendet werden kann und keine weiteren Ressourcen benötigt.
 
-Ich habe diese Software für meine Frau Iris Gothe an einem Wochende geschrieben.
+Ich habe diese Software für meine Frau Iris Gothe an einem Wochenende geschrieben.
 
 Autor: Klaus Gero Gothe
 Version: 1.0 / 2023-01
