--- a/emdr.html
+++ b/emdr.html
@@ -42,18 +42,71 @@ SOFTWARE.
 
 <html>
 	<style>
-		html, body { margin: 0;overflow: hidden;}
+		html, body {
+			margin: 0;
+			overflow: hidden;
+		}
 
-		body {background:lightsteelblue;font-family: Arial, Helvetica, sans-serif;}
+		body {
+			background:lightsteelblue;
+			font-family: Arial, Helvetica, sans-serif;
+		}
 
-		.button {box-shadow:inset 0px 1px 0px 0px #ffffff;background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);background-color:#ffffff;border-radius:6px;border:1px solid #dcdcdc;display:inline-block;cursor:pointer;color:#666666;font-family:Arial;font-size:1em;padding:6px 24px;text-decoration:none;text-shadow:0px 1px 0px #ffffff;position:fixed;bottom:40px;right:10px;}
-
-		.option {border: 1px solid gray;width: 200px;margin: 0 auto 1em;padding: 0.5em;border-radius: 10px;text-align: center;margin-bottom: 1em;margin-right: 0;background: white;}
-
-		.steuerung {position: fixed;width: 300px;bottom: 100px;right: 10px;text-align:right;display:block;}
+		.steuerung {
+			position: fixed;
+			width: 300px;
+			bottom: 100px;
+			right: 10px;
+			text-align:right;
+			display:block;
+		}
 		
-		.fullscreenBtn {position:fixed;top:10px;right:10px;padding:1px:font-size:1em;font-weight:bold;color:gray;border:1px solid gray;width:1.2em;text-align:center;cursor:pointer;background-color:white}
+		.option {
+			border: 1px solid gray;
+			width: 200px;
+			margin: 0 auto 1em;
+			padding: 0.5em;
+			border-radius: 10px;
+			text-align: center;
+			margin-bottom: 1em;
+			margin-right: 0;
+			background: white;
+		}
+
+		.button { /* Einstellung-Button */
+			box-shadow:inset 0px 1px 0px 0px #ffffff;
+			background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+			background-color:#ffffff;
+			border-radius:6px;
+			border:1px solid #dcdcdc;
+			display:inline-block;
+			cursor:pointer;
+			color:#666666;
+			font-size:1em;
+			padding:6px 24px;
+			text-decoration:none;
+			text-shadow:0px 1px 0px #ffffff;
+			position:fixed;
+			bottom:40px;
+			right:10px;
+		}
 		
+		.fullscreenBtn {
+			position:fixed;
+			top:10px;
+			right:10px;
+			padding:1px;
+			font-size:1em;
+			font-weight:bold;
+			color:gray;
+			border:1px solid gray;
+			width:1.2em;
+			text-align:center;
+			cursor:pointer;
+			background-color:white
+		}
+		
+		/* Auswahlbox Animationsrichtung */
 		.mode input[type="radio"] {
 			clip: rect(0 0 0 0);
 			clip-path: inset(50%);
@@ -313,10 +366,9 @@ SOFTWARE.
 			************************************************************/
 			function FullScreen() {
 				var elem = document.documentElement;				
+				elem.requestFullscreen();
 				if (!window.screenTop && !window.screenY) {
 					document.exitFullscreen();
-				} else {
-					elem.requestFullscreen();
 				}
 			}
 			
