--- a/emdr.html
+++ b/emdr.html
@@ -9,7 +9,7 @@ Es handelt sich um eine HTML-Datei, die in jedem Browser verwendet werden kann u
 Ich habe diese Software für meine Frau Iris Gothe an einem Wochenende geschrieben.
 
 Autor: Klaus Gero Gothe
-Version: 1.0 / 2023-01
+Version: 1.1 / 2023-01
 Repository: https://github.com/practical-solutions/emdr (hier kann man die aktuelle Version herunterladen)
 
 --------------------------------------------------------------------------------------------------------------------------
@@ -55,9 +55,9 @@ SOFTWARE.
 		.steuerung {
 			position: fixed;
 			width: 300px;
-			bottom: 100px;
+			top: 60px;
 			right: 10px;
-			text-align:right;
+			text-align:left;
 			display:block;
 		}
 		
@@ -73,22 +73,22 @@ SOFTWARE.
 		}
 
 		.button { /* Einstellung-Button */
-
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 15px;
-  background: #c4c9cc;
-  padding: 5px 13px 5px 13px;
-  text-decoration: none;
-  cursor:pointer;
-			position:fixed;bottom:40px;right:10px;
+			font-family: Arial;
+			color: #ffffff;
+			font-size: 0.9em;
+			background: #c4c9cc;
+			padding: 5px 13px 5px 13px;
+			text-decoration: none;
+			cursor:pointer;
+			position:fixed;
+			top:10px;
+			right:40px;
 		}
 		
 		.button:hover {
-  
-  background: #b3b9bd;
-  text-decoration: none;
-}
+			background: #b3b9bd;
+			text-decoration: none;
+		}
 		
 		.fullscreenBtn {
 			position:fixed;
